test/core/errors/templates_error/zs/instantiate_no_template_error.zs
package instantiate_no_template_error;

struct Test
{
    uint32 value;
};

instantiate Test<uint32> U32Test;
